runAll implementation completed